--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,54 @@
 stages:
+  - build
+  - build_push_review
+  - deploy_review
   - build_push_dev
   - deploy_dev
   - build_push_prod
   - deploy_prod
+
+build:
+  stage: build
+  image: docker:latest
+  services:
+    - docker:dind
+  script:
+    - docker build --pull ./
+  only:
+    - branches
+  except:
+    - master
+
+build_push_review:
+  stage: build_push_review
+  image: docker:latest
+  services:
+    - docker:dind
+  before_script:
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+  script:
+    - docker build --pull -t "$CI_REGISTRY_IMAGE:dev" ./
+    - docker push "$CI_REGISTRY_IMAGE"
+  environment:
+    name: development
+    url: https://beerlog-dev.amiv.ethz.ch
+  when: manual
+  only:
+    - branches
+  except:
+    - master
+
+deploy_review:
+  stage: deploy_review
+  image: amiveth/service-update-helper
+  script:
+    - export CI_DEPLOY_SERVICE="$CI_DEPLOY_SERVICE_DEV"
+    - /update.py
+  when: manual
+  only:
+    - branches
+  except:
+    - master
 
 build_push_dev:
   stage: build_push_dev
@@ -18,8 +64,6 @@ build_push_dev:
     name: development
     url: https://beerlog-dev.amiv.ethz.ch
   only:
-    - branches
-  except:
     - master
 
 deploy_dev:
@@ -28,7 +72,7 @@ deploy_dev:
   script:
     - export CI_DEPLOY_SERVICE="$CI_DEPLOY_SERVICE_DEV"
     - /update.py
-  except:
+  only:
     - master
 
 build_push_prod:
