--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,6 +56,7 @@ build_push_dev:
   script:
     - docker build --pull -t "$CI_REGISTRY_IMAGE:dev" ./
     - docker push "$CI_REGISTRY_IMAGE"
+    - docker images
   environment:
     name: development
     url: https://beerlog-dev.amiv.ethz.ch
@@ -81,6 +82,7 @@ build_push_prod:
   script:
     - docker build --pull -t "$CI_REGISTRY_IMAGE:latest" ./
     - docker push "$CI_REGISTRY_IMAGE:latest"
+    - docker images
   environment:
     name: production
     url: https://beerlog.amiv.ethz.ch
