--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ jinja2==2.10.1            # via flask
 mako==1.0.7               # via alembic
 markupsafe==1.1.0         # via jinja2, mako
 pip-tools==3.3.2
+psycopg2==2.8.2
 pymysql==0.9.3
 python-dateutil==2.7.5    # via alembic
 python-editor==1.0.3      # via alembic
